SERVER-49809 return MovePrimaryInProgress on view create or modify commands

(cherry picked from commit 4e0aa088a20784bf3391745c043e184036a305f8)