src/mongo/db/s/op_observer_sharding_impl.cpp
@@ -82,7 +82,7 @@ bool isMigratingWithCSRLock(CollectionShardingRuntime* csr,
 }
 
 void assertMovePrimaryInProgress(OperationContext* opCtx, NamespaceString const& nss) {
-    if (!nss.isNormalCollection()) {
+    if (!nss.isNormalCollection() && nss.coll() != "system.views") {
         return;
     }
 
